<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_add_meeting_txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="text"
                android:hint="@string/hint_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/select_color"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/activity_add_meeting_img_color"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/ic_blank_circle"
            app:tint="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/select_date_room"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_add_meeting_bt_pick_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/colorVeryLightGrey">

                <TextView
                    android:id="@+id/activity_add_meeting_txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:text="@string/hint_date"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_add_meeting_bt_pick_time"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/colorVeryLightGrey">

                <TextView
                    android:id="@+id/activity_add_meeting_txt_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableLeft="@drawable/ic_clock"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:text="@string/hint_hour"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/activity_add_meeting_bt_pick_room"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/colorVeryLightGrey">

            <TextView
                android:id="@+id/activity_add_meeting_txt_room"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/ic_map_marker"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_chevron_right"
                android:text="@string/hint_room"/>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_add_meeting_lyt_list_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/activity_add_meeting_lyt_list_user"
                app:layout_constraintTop_toTopOf="@id/activity_add_meeting_lyt_list_user"
                app:layout_constraintBottom_toBottomOf="@id/activity_add_meeting_lyt_list_user"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/select_users"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/activity_add_meeting_bt_add_user"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:text="+"
                android:textSize="24dp"
                app:layout_constraintTop_toTopOf="@id/activity_add_meeting_lyt_list_user"
                app:layout_constraintBottom_toBottomOf="@id/activity_add_meeting_lyt_list_user"
                app:layout_constraintEnd_toEndOf="@id/activity_add_meeting_lyt_list_user"
                style="@style/AppTheme.RoundedCornerMaterialButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/activity_add_meeting_list_user"
            android:name="com.example.mareu.ui.FragmentMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.MeetingFragment"
            tools:listitem="@layout/item_list_user"/>

        <Button
            android:id="@+id/activity_add_meeting_bt_create_meeting"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_meeting_create"
            android:textSize="16sp"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>

    </LinearLayout>

</ScrollView>